--- a/index.html
+++ b/index.html
@@ -3,48 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <title>TV Series</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Styles/styles.css" rel="stylesheet"> <!-- Enlace al CSS personalizado -->
 </head>
 <body>
-    <div class="container">
-        <div class="header-container">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ticket-fill" viewBox="0 0 16 16">
-                <path d="M1.5 3A1.5 1.5 0 0 0 0 4.5V6a.5.5 0 0 0 .5.5 1.5 1.5 0 1 1 0 3 .5.5 0 0 0-.5.5v1.5A1.5 1.5 0 0 0 1.5 13h13a1.5 1.5 0 0 0 1.5-1.5V10a.5.5 0 0 0-.5-.5 1.5 1.5 0 0 1 0-3A.5.5 0 0 0 16 6V4.5A1.5 1.5 0 0 0 14.5 3z"/>
-            </svg>
-            <h1 class="header">TV Series</h1>
+    <div class="header">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display-fill" viewBox="0 0 16 16">
+            <path d="M6 12q0 1-.25 1.5H5a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-.75Q10 13 10 12h4c2 0 2-2 2-2V4c0-2-2-2-2-2H2C0 2 0 4 0 4v6c0 2 2 2 2 2z"/>
+          </svg>
+        <h1>TV Series</h1>
+    </div>
+
+    <div class="container mt-3">
+        <table class="table table-striped" id="seriesTable">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>Cadena</th>
+                    <th>Temporadas</th>
+                </tr>
+            </thead>
+            <tbody id='TableBody'>
+            </tbody>
+        </table>
         </div>
-        <div class="row">
-            <div class="col-md-8">
-                <table class="table -Serie-table">
-                    <thead class="-Serie-table">
-                        <tr>
-                            <th>#</th>
-                            <th>Name</th>
-                            <th>Channel</th>
-                            <th>Seasons</th>
-                        </tr>
-                    </thead>
-                    <tbody id="rows">
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-            <div class="card" >
-              <img id="MovieImage"
+        <div class="col-md-4">
+        <div class="card" >
+            <img id="MovieImage"
                 src=""
                 class="card-img-top" alt="..." />
-              <div class="card-body">
+            <div class="card-body">
                 <h5 id="MovieTitle" class="card-title">Choose one Movie</h5>
                 <p id="MovieDescription">
-                  Movie Description
+                  Descripcion de la pelicula
                 </p>
             </div>
         </div>
     </div>
 
     <script src="dist/app.js"></script>
+
 </body>
 </html>
-
